# MeetingAgent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-03-24-meeting-agent.md
docs/superpowers/specs/: 2026-03-24-meeting-agent-design.md
playground/: README.md
src/agent/: graph.py  nodes.py  state.py  tools.py
src/api/: deps.py  main.py  models.py
src/api/routes/: analyze.py  audio.py  export.py  meetings.py  search.py  system.py  tasks.py
src/api/static/: app.js  index.html  styles.css
src/db/: sqlite.py  vector_store.py
src/integrations/: base.py  jira.py  linear.py  registry.py  webhook.py
src/providers/: llm.py
src/transcription/: whisper.py
tests/: test_graph.py  test_llm_provider.py  test_sqlite.py  test_tools.py  test_vector_store.py
tests/api/: test_analyze.py  test_audio.py  test_meetings.py  test_search.py  test_tasks.py
